--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@matterlabs/hardhat-zksync-verify": "^1.2.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.0.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^9.0.0",
     "hardhat": "^2.19.3",
-    "zksync-ethers": "^6.0.0",
+    "hardhat-gas-reporter": "^2.2.0",
     "prettier": "^3.0.0",
     "prettier-plugin-solidity": "^1.1.0",
     "solhint": "^4.5.2",
-    "dotenv": "^16.4.5",
     "typechain": "^8.3.2",
-    "typescript-eslint": "^7.4.0"
+    "typescript-eslint": "^7.4.0",
+    "zksync-ethers": "^6.0.0"
   },
   "scripts": {
     "compile": "NET=hardhat npx hardhat compile",
