Add scroll network config

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ BASE_SCAN_API_KEY="your api key"
 LINEA_SCAN_API_KEY="your api key"
 ETHEREUM_SCAN_API_KEY="your api key"
 OPTIMISM_SCAN_API_KEY="your api key"
+SCROLL_SCAN_API_KEY="your api key"
